Dodao preostale rute
