# backend/routes/api.js
@@ -3,7 +3,7 @@ const openapi = require('./openapi')
 const collection = require('./collection')
 const resource = require('./resource')
 const genre = require('./genre')
-const highrated = require('./highrated')
+const ids = require('./ids')
 const dlc = require('./dlc')
 
 const router = express.Router()
@@ -12,7 +12,7 @@ router.use("/openapi", openapi)
 router.use("/collection", collection)
 router.use("/resource", resource)
 router.use("/genre", genre)
-router.use("/highrated", highrated)
+router.use("/ids", ids)
 router.use("/dlc", dlc)
 
 module.exports = router
